# reasoning-slms

./: .gitignore  .gitmodules  README.md  README_dapo.md  gemma-3-1b-it-grpo-4bit-unsloth.o4527317  gemma-3-1b-it-grpo-baseline.o4487966  gemma-3-1b-it-grpo-baseline.o4493213  gemma-3-1b-it-grpo-baseline.o4504179  pyproject.toml
config/: accelerate.yaml  dapo.yaml  dapo_best.yaml  dapo_exp.yaml  grpo.yaml
reports/: citations.bib  proposal.tex
reports/midpoint checkin/: citations.bib  main.tex  midpoint_checkin.tex
reports/proposal (diverted from)/: proposal.tex
scripts/: inference.py  train_dapo.py  train_grpo-us.py  train_grpo-us.sh  train_grpo.py  train_grpo.sh
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py  UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
